feat: add characters with its layers
