# src/docs/swagger.json
@@ -93,6 +93,148 @@
 				],
 				"type": "object",
 				"additionalProperties": true
+			},
+			"Pick_Episode.Exclude_keyofEpisode.characters__": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"air_date": {
+						"type": "string"
+					},
+					"episode": {
+						"type": "string"
+					},
+					"url": {
+						"type": "string"
+					},
+					"created": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"air_date",
+					"episode",
+					"url",
+					"created"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Episode.characters_": {
+				"$ref": "#/components/schemas/Pick_Episode.Exclude_keyofEpisode.characters__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"Character": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"species": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					},
+					"gender": {
+						"type": "string"
+					},
+					"origin": {
+						"properties": {
+							"url": {
+								"type": "string"
+							},
+							"name": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"url",
+							"name"
+						],
+						"type": "object"
+					},
+					"location": {
+						"properties": {
+							"url": {
+								"type": "string"
+							},
+							"name": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"url",
+							"name"
+						],
+						"type": "object"
+					},
+					"image": {
+						"type": "string"
+					},
+					"episode": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"url": {
+						"type": "string"
+					},
+					"created": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"status",
+					"species",
+					"type",
+					"gender",
+					"origin",
+					"location",
+					"image",
+					"episode",
+					"url",
+					"created"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"GetCharactersByEpisodeIdResponseDTO": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Omit_Episode.characters_"
+					},
+					{
+						"properties": {
+							"characters": {
+								"items": {
+									"$ref": "#/components/schemas/Character"
+								},
+								"type": "array"
+							}
+						},
+						"required": [
+							"characters"
+						],
+						"type": "object"
+					}
+				]
 			}
 		},
 		"securitySchemes": {}
@@ -130,6 +272,86 @@
 						"in": "query",
 						"name": "page",
 						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "name",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "episode",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/episodes/{id}": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Episode"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Episodes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/episodes/{id}/characters": {
+			"get": {
+				"operationId": "GetCharactersByEpisodeId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetCharactersByEpisodeIdResponseDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Episodes"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
 						"schema": {
 							"format": "double",
 							"type": "number"
