# src/dtos/episode.dto.ts
@@ -1,3 +1,4 @@
+import { Character } from "../entites/character.entity";
 import { Episode } from "../entites/episode.entity";
 
 interface Info {
@@ -11,3 +12,13 @@ export interface EpisodesResponseDTO {
   info: Info;
   results: Episode[];
 }
+
+export interface EpisodeListAllRequestDTO {
+  page?: number;
+  name?: string;
+  episode?: string;
+}
+
+export type GetCharactersByEpisodeIdResponseDTO = Omit<Episode, "characters"> & {
+  characters: Character[];
+};
